SIT-000 fix library dropdown visibility issue

--- a/app/assets/stylesheets/partial/_library.scss
+++ b/app/assets/stylesheets/partial/_library.scss
@@ -102,7 +102,7 @@
 
   .library-main.affix {
     position: fixed;
-    overflow-y: scroll;
+    overflow-y: visible;
     height: 100%;
   }
 
